# adventofcode

./: .gitignore  README.md
2015/python/: README.md  template.py
2015/python/1/: not_lisp.py
2015/python/10/: look_say.py
2015/python/11/: corporate_policy.py
2015/python/12/: accounting_elves.py
2015/python/13/: knight_dinner.py
2015/python/14/: reindeer_olympics.py
2015/python/15/: combinations.py  helper.py  hungry_science.py
2015/python/16/: aunt_sue.py
2015/python/17/: such_thing.py
2015/python/18/: gif_yard.py
2015/python/19/: rudolphs_medicine.py
2016/python/: README.md  Template.py
2016/python/1/: Mover.py  (+1 more)
2017/python/: README.md
2018/python/: MainTemplate.py  README.md
2019/python/: README.md  template.py
2020/python/: README.md
2020/python-functional/: README.md  template.py
2021/python-functional/: main.py
2021/rust/: template.rs
2024/go/: go.mod
2024/haskell/: template.hs
2024/python/: .pre-commit-config.yaml  InitializeDay.py  pyproject.toml  template.py
2024/python/1/: main.py
2024/python/10/: main.py
2024/python/11/: main.py
2024/python/12/: main.py
2024/python/16/: main.py
2024/python/17/: main.py
2024/python/18/: main.py
2024/python/19/: main.py
2024/python/2/: main.py
2024/python/20/: main.py
2024/python/21/: main copy.py  main.py
2024/python/22/: main.py
2024/python/23/: main.py
2024/python/24/: main.py
2024/python/25/: main.py
2024/python/6/: main.py
2024/python/7/: main.py
2024/python/8/: main.py
2024/python/9/: main.py
2024/rust/: template.rs
2025/rust/: template.rs
(+217 files in other folders)
