[project]
name = "adventofcode24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [


    "beautifulsoup4>=4.12.3",


    "matplotlib>=3.10.0",


    "numpy>=2.2.0",


    "requests>=2.32.3",


    "scipy>=1.14.1",


    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]
